--- a/UygunOlmayan/UygunOlmayanDurum.resx
+++ b/UygunOlmayan/UygunOlmayanDurum.resx
@@ -33249,6 +33249,171 @@
         qBFHHn/88Qgil2TyCSmtpNLLLb8Yw0wz21iDTjnrUFZPOjP16FBAAAA7
 </value>
   </data>
+  <data name="pROGRAMIKAPATToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        R0lGODlhMAAwAPcAAAD/AEyvUE2vUE2wUU+xU1CxU1OzVVSzWFa0WFi2WFq2XWC7XGO7YGS6Zma+X2e7
+        a2i9Z2rBYG2/bG3BZ2+/c2/DZnHDbXXCeHXFbXaUSnbIaHeVS3jCenmWTXyZUX3IeX/LdH/NbYCcV4DH
+        gYHMdoHQaoLIhIPPb4XMfIjMg4vMjozMj4zVdY2maI3TfJCpbJKqb5LWgJLZeJLbc5PSjZSrcpfUkJjY
+        hZjdepnSm5zTn53WlZ3biZ/hgKB5Q6B6RKDdjKF6RKF7RqHZmKLZmqLigaPXpaPejaWATaaBT6e6i6i8
+        jKjgkaqGVaqHVqrnhqveoayKW6zoh62/k63kla6MXq7Ala7bsK/csbGRZLKTZ7Lhp7LnmLPEmrXtjLaX
+        brbGn7bom7jgubrJpLvxkL6jfr7tob7zkr/Nq8GohMHkwsHotMH1k8OqiMT3lcbxpsfUtcfrucj5l8mz
+        lMpePcpfPspfP8tfPstgQMxiQsxjQ8xmR8z7mcz/kM5pS8+8oNBxVNDawdDvwND3rdD+nNJ4XdK/ptL/
+        ndPBqNPs1NV9YtV/ZdX5sdeFa9jHsdju2dj0yNnJs9qNdtz9tt3Pu93k0d6ZhN6did73zN/Rvt/Rv9/3
+        zd//uODTwuGkkeHo1+H4z+KmlOPYx+SqmeSuneWuneazo+azpObczue0pefd0Of15+q9r+q/sur81uvw
+        5Ozl2uzw5u3HvO3+2e7n3e747u/Qxu/48O//2/DQx/HVzfHs5PH07PPa0/RDNvRFOPRHO/RKPvTv6fT0
+        7vVEN/VHOvVNQPVQQ/VYTPXi3PZSRvZdUvZpXvby7Pby7fb59PdgVPdoXvduZPd0avd6cPfm4fhyaPh6
+        cfh7cvjp5PmGffmQifn9+fqUjPqUjfqXkPqfmfqtqPru6/r49fuqpPu9uPvAu/v9+/y0r/zGwvzKxvzM
+        yfzo5vz18/z29Pz69/z+/f3Rzv3V0v3W0/3f3P3f3f308/7l5P7u7f77+v79/P/t7P/5+P/6+v/8/P//
+        /yH/C05FVFNDQVBFMi4wAwEAAAAh+QQFBAAAACwAAAAAMAAwAIcA/wBMr1BNr1BNsFFPsVNQsVNTs1VU
+        s1hWtFhYtlhatl1gu1xju2BkumZmvl9nu2tovWdqwWBtv2xtwWdvv3Nvw2Zxw211wnh1xW12lEp2yGh3
+        lUt4wnp5lk18mVF9yHl/y3R/zW2AnFeAx4GBzHaB0GqCyISDz2+FzHyIzIOLzI6MzI+M1XWNpmiN03yQ
+        qWySqm+S1oCS2XiS23OT0o2Uq3KX1JCY2IWY3XqZ0puc05+d1pWd24mf4YCgeUOgekSg3YyhekShe0ah
+        2Zii2Zqi4oGj16Wj3o2lgE2mgU+nuouovIyo4JGqhlWqh1aq54ar3qGsilus6Ietv5Ot5JWujF6uwJWu
+        27Cv3LGxkWSyk2ey4aey55izxJq17Yy2l262xp+26Ju44Lm6yaS78ZC+o36+7aG+85K/zavBqITB5MLB
+        6LTB9ZPDqojE95XG8abH1LXH67nI+ZfJs5TKXj3KXz7KXz/LXz7LYEDMYkLMY0PMZkfM+5nM/5DOaUvP
+        vKDQcVTQ2sHQ78DQ963Q/pzSeF3Sv6bS/53TwajT7NTVfWLVf2XV+bHXhWvYx7HY7tnY9MjZybPajXbc
+        /bbdz7vd5NHemYTenYne98zf0b7f0b/f983f/7jg08LhpJHh6Nfh+M/ippTj2Mfkqpnkrp3lrp3ms6Pm
+        s6Tm3M7ntKXn3dDn9efqva/qv7Lq/Nbr8OTs5drs8Obtx7zt/tnu593u+O7v0Mbv+PDv/9vw0Mfx1c3x
+        7OTx9Ozz2tP0Qzb0RTj0Rzv0Sj707+n09O71RDf1Rzr1TUD1UEP1WEz14tz2Ukb2XVL2aV728uz28u32
+        +fT3YFT3aF73bmT3dGr3enD35uH4cmj4enH4e3L46eT5hn35kIn5/fn6lIz6lI36l5D6n5n6raj67uv6
+        +PX7qqT7vbj7wLv7/fv8tK/8xsL8ysb8zMn86Ob89fP89vT8+vf8/v390c791dL91tP939z939399PP+
+        5eT+7u3++/r+/fz/7ez/+fj/+vr//Pz///8I/wDP/RNIcKDBgggPKkzIUOE/ff8iQpQY8WHFiRYpaszI
+        EePEhiAXigzZ8KLJjR5PdlSZUiJJkevATYMWrJivY8iwfZP3bqTPlSj/3et2jJivo0aR+jKqrNu9lkBf
+        nsOnzaZNo1d9Zc2qjZ3PgiwvojNmNOnSo2eVKjWGLqxLn++0nd06ty7Wudr8hQT6z541tGYDAx6slJg0
+        d0HhTtPK+K7jxpC3StMrkqXcsoTTahZcWBtLhujsRhZN93GxcJU94jOmdnNmzq6N7TuZsOpo06RzG9WW
+        0OS9rK2JAaPmGik1YMWX/np6EaG324zVnetGetu/dMFyF7MOdqK/oq+Bpf+buG2zdYjpkAtmmi9jwXVW
+        R2NDSB0rd4PUSjOWB1YiuLOwWZdRecScV9E2sJUFTnMGTRMfbt3Qd59A2+gX33wGZbRMcmYJCBWCrwG4
+        jHsG1cSYhb5EKFKFujF2TH8PJZiZhwfK2BqDArW41YQD1QfdVt1FxJqNSxmoEYEhlhUMiQIhE5+FPNKn
+        oy/QwKgPNgC+ZuQ/29DIJYdLUYPjP988GBmPLKpIkI902QROkP/Ew6GYGIF4lJfErbdUPEz+844yJ9YV
+        TDoGsXiXmur8YuExDlHUDWaticdlgNf9ImM3HiF0z4++BJNfbtgoqt09DnkkV3AhoooqMZ5plBA7x3CQ
+        itusjQWDT28boUPkrpm11VFDtqFIa5u+8JbaSf1Iw6uqWVrDT1Qj8SONmcJCN409PyXWjzbLJqfNs1Dp
+        81I4sVbbZjDovMQXRvto8wuzghWjDT6J9UnSPdsASu1cx3hDqlQVrWtSPvGAg80yQwazDDXgxONPuJ99
+        JTHA6kJcr8UCuzrxxhRXdrFbGYesT0AAACH5BAUEAAAALC8ALwABAAEAAAgEAAEEBAAh+QQFBQAAACwv
+        AC8AAQABAAAIBAABBAQAIfkEBQQAAAAsLwAvAAEAAQAACAQAAQQEACH5BAUEAAAALAQABAAoACgAAAj/
+        AAEIHEiQoDhz3bBFg4YsGrVv5fCdK0ixIkV+6KRZJCgNHb+NIAH8I6csZMFj4d6ZLDgP2sqK0OS9PBcO
+        QLGXBW8GI/cvpD5vOENu62nx3LegJodaJId0JVOK82w23agzXkF9LqeahJaP4FOtJmsK5Fdyoy9wyDYG
+        CwZS2UcA6EKaA1CPLcVg89SFjPtPo8Vg6wbOA1YQGT2B5n5tlPZPHEhjVgcGHohsH0FwIPHNBXns8MBy
+        ApnhI0gv7cZy3Uwiu0cw41uB8spu/IZtJbTRA/URVGcXJLVoL5nZq1iuN8iFAIitnKabYDjFJoktQ3bT
+        acF81FbehAbcJDDQFO0xyHvp0KSxdBvFZQ2J7WhbmQPtWRMrkJ1pkN7AW1zmWaB4xKTJZpE5uFmE2UDs
+        LDPQL3oNJI9xFO1zjjVUgVfPfQIBE5VA6xBm0XhwhbSOPMZUdEw9AGy2UVwA5HPMYx5WpAw4vrTlzkBf
+        gQVSju+sp2NFyxDl4E3K/TgQMb9sWFCORgpEX0H/bNPkQN4ISVGUU34zEUgjETkVkjy9FI+PQS2j5Ev5
+        kBSUMuQ011Q+6FAYEjPo3PjjP/iU881vy3CHjTfm7GPlRgEBACH5BAUEAAAALAQABAAoACgAAAj/AAEI
+        HEiQ4Dl+uVqNCuWpFKtezv4VnEiR4j9xphbZoUPnDseOdPAoSiVOYsWTA5NZopMnpEs8L1mytMTuHEqK
+        /ka19MiRJ8ieH/HgGfXuJkF2hWC2hMk0ZtOmi6oZBdDLD9CrP7P69Oin181kQp2KfSrWj66T2fx43PqR
+        LVafMP1InagvqUyyeMfGXDSu4L9Rb9sKDhx4lD6CyfTozQtTESDGIe2wG/hvpVuQpEyx1VPt3aU6WoNa
+        MonvrlM7sgBUfkrq37l/uqzmzZNNoCmYgc8KzNeIp6J/wAHkGgzSYyoA5xotlkTQ3eM61V4D4OcHcp7f
+        7uysJX4nFMFqe0oF/wdwifDLdrmULmZFsNc4k7YgN+3FyqV5PboFmnQeGqhHPKzotJhLck3kyYDqlRJK
+        cdx9VEg7iPWXFUx3eOKJevLRMZdA7RSCoEuhlGKfhB55MlE1Vl22HR6ksLLUgIW4Q5EuewzYUiu6MBhY
+        Hbno945XA7ViHoW6ONPSi3hdot85puhR20AXDsjPP4rg1h8gMv6jD1h0AGIPQZIE5tEiEqUyYI+uUcnU
+        IocJlONspAgkDoXE7aGLlv+YctVoAMiSx2VCiaOfJUg6dQk/ydTImoiQWWKTQNngpiIgHqrYYB4bIsfo
+        hxk+5V1B7yiiI4kNckShIv5QhKJpnS62x2QV9VZSo3mW+qcHkCfFxqmryUxVjajb0RpUR4o8OdU4pdhR
+        aIZ6hNLmVALpk40lTYkZEh6WVGMStAT9k00qiizrUiOk4PMotxX9044urJTiSSgt6uLOtjcFBAAh+QQF
+        BAAAACwEAAQAKAAoAAAI/wABCBxIsOA/YaooRXKUCZWzcwUjSpwIQJ+oNk58+AiicaMPJ2lE5aNIcuA4
+        REmE+FDJcqVLlU4MjSwZ8V+mjBw15vSos6OQJpn00RyYr0zLoy+TtmzzbKizLD2j8py6k2MWYSWdRUHK
+        VanXqxTfZeFYtWNZqTtVZhkn8Z9Rr13jJm0DsWAmtGbN/kiC5CxVH5kKjosCN6mhcf/OISp8tMlMgYv9
+        cjQ09s8/ff8c4ZUqxNDAfykLdwLQzsmcc4nvym3p5J1AUSrRIkE1cNecf7g7Sc7LUZTANowpERSG+pwq
+        xkrTAPjnhGxejUJof8YMa/NUmPqErfaRBBbBxMKQI/91djz2X41OsA7f3ZOjkITb1Q4jqE980kyRPLL3
+        8cX1wDLnXbeRI47E51IZBI3zhX0qRUKJS9bt9BgAw1QRoHNCUIKKgSypVxth26nijH7P/bULZgTRkkSA
+        KgVBHIgMwpLYPwShggRjTdCYhnn7qYKbPrsQpMkPf3HUhkCoMLiSJjPO4aEqQsQ1GgD5NHFhXpRg9s8c
+        TjgDwJB+/SSUQIZw6MiMfwiRxWJyIULQO1ZeqREiuL1jSIllOcEWQZ0wiISVHApXkD5pkBghnj5tlAaN
+        ET2jhZLxVTFhQcJYeOihQUThJUnCPMohXFVsWtI4hTp3qUtBpOHfUOd00sSnKkUqQQmjQw1kJ6CIutcE
+        InvWGtE7qKQBY2NtdEKrrxTpQx4ljjioijDHlhQQACH5BAUEAAAALAQABAAoACgAAAj/AAEIHEiwILdK
+        cMCAsTIGzqdhBSNKnAiAFxoYGzJkyKgxY4cXaHhRHDnw1ZIMHVCqTMlSpQclsUhK1AcmJceNGnF2zNmh
+        A5h3MgfyatGy6MqjLWG8CvpJxM6nOqPezCjiE8lPPZFqNWpURCWKsURknJqTLNSbKUUslUh0q1uuR2GM
+        iwjmbNm7du2CKfjKw9u/cFluiDnwpFmcLaTiVayxg5KBw/7uPRn4rwfCaFLa7SJQ3xTGoMdmQCOwhtsX
+        5wh2Aby1BYBnG0RDtfKPoJXQi1k+q1Q5pZXUA1f31voJjsq8GWjbxr3TY8LhvoELFM465ZjVskErH3j7
+        MNqNXaxA0ldpheA56sPBjDnOPDnBf90Xi+7QcHzL8gPPs4ZTCaf3xfgJBB9oNlUyjH1HBQiAfpVxA8AL
+        mrV3k4L/mEZWRjAIhEZ1WgW4YWBjCMSLTfKVqFF5Gx7WwQYiCaQEgkaZVtkSBMWi2X/I/dfBWgOtB2N1
+        nBX0zgv+mdieTS3oI9ErTv0YmActSvSJXzkaOVYHVo1USZMccuVBliS9QmR2OKq0QQuEBTXOGBv86EGQ
+        QdX4InsXorTBEjzGWVAsaLQFVw1jQKQnSbvBcV0XDVXyjJ4BAQAh+QQFBQAAACwEAAQAKAAoAAAI/wAB
+        CBxIkGAtNTlMSHjQgMIII2puFZxIkSI3MRcIBNg4YGOAjh0viOFWsSTBKwoCaFypsiVLAgiwkDQ58dED
+        kB47cszpUeODRzQJYmlZwKXRl0YPXAkKQAfPnVA/PpU6IAdNp0izHt1awGrFoTij6pQqtufHpTWJbtXK
+        tuWBRAXhPShLl6zdsR0fzBR4pa3ftUaxDOSWEu9Uw3XHElAwU0yAon8jrxUjMOPhy4l5hgRQC/JaA0QE
+        SNZa9JYaqppTgJo15C5muxoHINToeeUOXK5wQwAs2YiJllEV5J6FK44E15k7ElBY26gN4sNBQUFRYPTj
+        ABTmhiUrABLx77hmzfKKY6MBYtgfGzSgvVZCeNzvh+OCBIUDAt4BHlAAjhzCjjjivQcedGvQ0IBmKjnU
+        HFsGpLDFavBBF98BRhVlglPbnTeWBTsIMmB4a6BXlRrsWafRAiisAQp8NGgVEX8avlaABUQIcuBOytUC
+        AAf4mcgVBQKJkeFrMUalEWUAnIPAgj02qZECzww0VGZUujYAWgJxc5yPkTVQkwGoVXlebAMANVFf13G5
+        lWAV5aCRmJd1pANNbjqJ35xBXQHmkHWRySZTiRzHpF8NmMlUllikhJxrClwBz6ETnSMGj20VQIEYUUJa
+        kmk6mEBBA/qZkIMaOjIVEAAh+QQFBAAAACwEAAQAKAAoAAAI/wABCBxIkGAiIyMeGCgQAEEDEzoScStI
+        sSLFVTkUWCSoIMeqjSAB3FJhIGTBACs+miQo5sDKigjEvOS2YiCBlwUJqIAX8hkHnCE5TLTIbQRQkxd4
+        Vqx51KSKijIF3mxqkQCWgrdcUjWJoBbBp1tXMgWwamrYkANU6jj7MgcAeBrZmlRwLlHIAAQCyD24MUCA
+        AX7lIuxrwIUCvGxNNNhIYhAnHoD1gkyAgUcYEBQblKwYYxInzwryipZsAEIMJoM8ewZCEcEAAJIJGmDk
+        mROVv34XkOBhpvZnTsAnvRn42q9kswNd/J7kwkUYx6qXS5+EIKfWigWgA/8dfLvvN1RcQKugeGAx4+jo
+        fzMyEwODAdEVH5gI+aZ78DdHUDDI6zeyxRFrgTTBZ4xQccME1UmF14J5WWSEXSFhwABaxr1WkURxyQVS
+        gm5pCFKHq8TmYUEGqATAWCN+RdAqGaYIwAG3FCRGcRoWF0BUBYGVIooEnfPTiEJtxM0FHo4QI0jnqEAj
+        UDauMJRJWLQI1AE4vlTLCha+pNORTWEkJUw6mBhWXUYodgBe5Y3woFIhBQQAIfkEBQQAAAAsDAAQABoA
+        EQAACMIAAQgcSLCgQYERDipUmEAKHwcLIwrUwIfPIS8GJB400OMQIY+HZAwkEICAxApnDln86CUhgAEF
+        BgRYSADHx5uHcBQQSCABGxYkDy4483GlnAhBAVD8qGHmwJIsCOEkVMRAgAADABTgU5TQApIkF0gBadFN
+        iJJoTWoASYiN1QAnVoJ8kuAq1qsDWZCVYsAhWUIhCqA9OOAJW6lsvSzIKjEBGbJkRWocyEAO20NnXE4e
+        GEKujIybC8og5KZCaIUydp4OCAAh+QQFBAAAACwMAA4AGgAUAAAIhAABCBxIsKBBAA4OKlxYos+MhRAH
+        NuzTh0VEhhQzJrxYcGLGEgQ4EvRIscSAACIFkuwDMkBIgQFQYszI8qRMAAEq3DS4siXBADhY7hQ4oOfJ
+        n0FL7iTQ8yXBCDSFEjWq8ETUEi6bQuzZk6PVqDRLpFz5MaXAr2HNSkyrduBXsW1HwhUZEAAh+QQFBAAA
+        ACwvAC8AAQABAAAIBAABBAQAIfkEBQQAAAAsLwAvAAEAAQAACAQAAQQEACH5BAUFAAAALC8ALwABAAEA
+        AAgEAAEEBAAh+QQFBAAAACwvAC8AAQABAAAIBAABBAQAIfkEBQQAAAAsLwAvAAEAAQAACAQAAQQEACH5
+        BAUEAAAALC8ALwABAAEAAAgEAAEEBAAh+QQFBAAAACwMAA0AGgAVAAAIywABCBxIsCBBBlISGFzIUCAZ
+        QoRCNJwoUAahQxc1UGRYgc8hj1IKBNhY0MAZjIfkLAjAkuRAHB8xhghAYKRLABpQEnrC0qZLA3w8EpJT
+        oOZNgVIuXqzQ0iCBhieEHsJh1CDLAQsXSD0jcmHNBDRLSkHJJ4JPgiwJePGyAOtAFjpZnC1IIARKGQgE
+        LiBLZm5BBHKUHnITosBDjHwWUFzgJeZFPoFjStxYN7Lgi0+OFugh1aMbxUcBOGisdHJoAAVC8CFU5DRa
+        AzgMuAwIACH5BAUEAAAALA0ACwAXABcAAAjIAAEIHEhwIAQGBRMqHMiF06AwEBZKBMCIE6dJEwJonEgQ
+        wqSLnAQQCDCSo0ASIM1oHKAxgEkmHycdIUmTgEkzFjmBYLnSZAGQkxjUNAnAgsVJjFoOIArABUgqI0sS
+        5fKRU4wALJkCGASyglSiC3JOMrAxoc2EJGK+IamQp0uCQEDOXFiTLYAAb2KioLtSaYACVTkhVBg1gIEF
+        FiyQuAGSUQGJPCeIFRvGZACPQEHGIKoA5FGLGIgaGDTITBgmTGLEeKz1blaOAQEAIfkEBQUAAAAsBAAE
+        ACgAKAAACP8AAQgcSJBgLTU5TEh40IDCCCNqbp0rSLEiRW5iLlgkeEEMt40gAfy7oiBkQQRYPpok+OjB
+        yooPHr08h2VggZcFD1z5F1KfDpwhc/C0eO4n0KBDKdYEGiBAyCsVZQq8aREBBxsCAxDQ6rTigUQF4bkE
+        iWCNK1yuEAAY0DTAgI0PVAqEahITWlwfturtanEpAG4lTW6ZhWvWlrZsQypQKeblh8K4IO0lYLLxP40r
+        EZwlDIFtU5MX/tUCKmjzEK6UTd5SA9QG5DhN365ECFQC4bMHtr40YuLoJsKzUnxeqfAoFMhbdK+k4FL2
+        yhHAQbkNSXlAgwZTXxa4O8sCzgcUjgK+iAN5B06H4m3cFoTThFGcARpAnhXYZA7W1FFrhQR5xMuIJrmF
+        GAOzAEfDS7Wcw0F+ew2GlitUhRQeAI2BhFh8m+GC1UoVnqPWRpNJAMlZmHyo2DMD+fUSCoIcuBJdAnEj
+        wVERhtRAUgI9YsBa4lVU3QBSFQRjj31Z9E8ORFqkA44FHZlkQTpMBNJIOzr30o9YMLlRIjP22ECQL3GD
+        RX0rKXAFPESeI8aCEoqB4pMiraaDCRQ0AJ4J99WiZUUBAQAh+QQFBAAAACwEAAQAKAAoAAAI/wABCBxI
+        kOA5bpXggAFjZQycT8P+FZxIkeI/XmhgbMiQYSPHjR1eoOElsaLJga+WZOiwsiXLly09KIl17iRFfWBY
+        euzIkefHnh06gHlnkyCvFjCTulwKE8arogA+ifhJ1afVnRtFfLL5KSjTr0qViqhkMpaIjVh7pq26k6WI
+        pxP/IQVLN+xSGOMK/gPDVq3fvn3B6CP4ykPdw3Zfbog18J/KtR09jLn6lzLHDkpKDqvb4dm5QIjpemAM
+        AA1Lth6G6fv3DzTk1zzRADhXg+6Yc/9wfw4dtsW/ZxvQVg7EenVry8hfPquUuGUg3blBN7f7CU5LwBmI
+        /zPuunJakAqnO/GHvls8zDFdeMLmqJ078rYdu1gxPz53dN4ZwEw+/b5ne9bd9QWSQ/TB9Jx95R0GRyXq
+        eTdccQAm11ElwxS41IG6SUcXN/+8wN96Vv33z2TfZQCDRGjgpxSGz3gV1hgC8aKTg9gRN4wHkHWwAS8C
+        /aOEhUqN4eJXS9QkUCyngaikXx3AJdA5+6nIWxcTvfNCg9iBqFMLg030ylRA1uUBjxV9YliWNKrXwVYn
+        VQKmlEl5wKZNr1wpHJqXddQCaVCNM8YGYXrQRUlQCaRPLD9eRxlIGyzxCqGFNhYLGnPZVcMYwxgZaUW/
+        JYReFw5V8gykJwUEACH5BAUEAAAALAQABAAoACgAAAj/AAEIHEiw4D9hqihFcpQJlbNzBSNKnAhAn6g2
+        Tnz4CKJxow8naUTlo0hy4DhESYT4UMlypUuVTgyNLBnxX6aMHDXm9Kizo5AmmfTRHJivTMujL5O2bPNs
+        qLMsPaPynLqTYxZhJZ1FQcpVqderFN9l4Vi1Y1mpO1VmGTfRqNeucJO2gVgwE1qzeO/ezVRwXJS3gOMe
+        bTJTICKqZpH8QKx3qhBDA/+lBJwQSeDLTt4JFKXyriaBqJIwHk3WhyiBbQAjIgjrr+C3aQD8c1I6ahZn
+        BIVVIZ3XpRN9wgQ7wTpw2JfLXZ2pcinV0J85c3YRfFeGd0+OQhLCHffvXPd/BYEL/4OlSlMmR4iQdM0U
+        yWPVH//0/Zsv36B8+vNFp93oyFHXJt4F+J1BAnoHWCSUMMcTEog4QkknqsCyizCFCRTffP+8UxZ2lKDy
+        GlJlsDWQMND9YQhlzrjX21k+fDEMQbvQ1ptKQQhzjmvIJZWFdAO1kwVcTYCXRmfWTeUELQSduKEPbYCW
+        Y1dJoCJQJ4F1IlA+TRTJohCaoPLDlk0IJZAhHwYmRFyrDfROllqu6KYTIg5EZZl0rkRJRPqkoWJjLO4X
+        RBrgRfSMFk8+WUWFBenmJp94BREFbiQJQ2idXFUBaUnj6FlbkTSmodlQAJzTSROU+hDFnaBOZ0iWRC75
+        EyJxpho6HSpp4DhYG50EKitF+ihHiSMIqiKMrjQFBAAh+QQFBAAAACwEAAQAKAAoAAAI/wABCBxIsCC/
+        XK1GhfJUilUvZwUjSpwIQJypRXbo0LmjcSMdPIpSiaNIcmAyS3TyfFyJh2XKlJbYlZTob5RKjhpxeszZ
+        EQ+eUe9mDmRXqKXKlkhdJk26qJrQXn54St1JVSdHP71KJvOptOvSrn50Uczmh6PVjmen6mzpx2lEfUVf
+        fp3r1eWicRFHqUXLd+/eUQWT6alLt7BSOzIHokxbtW/jqXgsDcQn97AuSYbZ1s2TTaCplntlCQzlF1Au
+        XXUac0wlsFHdUgRZ7VF6id+5f5fo5lEEwJ0ds31N/SOoKypH0/+S63sHCPLHdrmMerWkj2C1QnQ8uft3
+        +3YyRXV7sf9a6beRPYLtkulL/m+9qcFnOeJhZZPwR0CdCXLnXk2RYZWlkAacX3tkVdA7pYDGWEt3eOKJ
+        dIXVYQpeBfWiR2YrhVIKeY8pkoxyw1kHCGPA4UEKK0d1tQcp+3VXTTsEubPIf3S0ootHZxVSDXvrueMJ
+        HToSlI8lC26kizMqpYgUILbtZwt2bIk10D+kGMYPAP45dscl7blzSWo66dEKQaSoRsciAqVCmC7FFeaJ
+        QLJsRopA4jDo2Gx+bSSJLnksiMdIAlmipH0YfiXZQNkoqOWieXKUh1sDbVgooUqFEtE74A342KZrbaSI
+        PxJVE9Wgk861R2IS9YInp4ziqIeBFBVDR2lmeyQjVH84ttrpHYrkJ9Q4pdhBqn16hFKdUARlY0lSe8kX
+        GaTIFpRNKooM21IjpOAT7Uzt6MJKKZ6EcqIu7kQbEAAh+QQFBAAAACwEAAQAKAAoAAAI/wABCBxIkKA4
+        c92wRYOGLBq1b+XwFZxIkSI/dNKI+dqokaMvjdLQ8atIkiA5Zb6KfUy5UqVGl8fCvStJcR40jR1Xety5
+        Epo8mgTDsXTJ8mXLoyqDkQMKwNtGnVBzSn2KcxvNb0OPGt1atGsxqxXJrZzKk2zUj0snzsvKlahbrVmD
+        xSuoD1pZqnjv3oWWz6TKt23hAu4abiA/lGaJBQt2diMycL8af1Q2EgA6r0fXxUPcVRm9f+UYBy6GTmDG
+        vCvNCaSHDGowef/0/VsnGi9IAOL+YgZH8J5djcHS/Tv3D8A8YINV4jM3Ni+yegTxMfP1q1zs1cYSfyzX
+        TXfbYPMI2v+jRm64wH3IkrP8hk1yR2DqCMoeiG+ZdpzUoulWr3oiP2bqGbVQc3r5Uph81mjnETHLpIdZ
+        W9JMdFlgRqkETTTuUcWMPRSV88t9Hzm0n2DIcCjQP30NtA4wFLKEDVY4oUYMMuyc+E8405go0DzH3OdN
+        Od55FQx0ABAHpC/MiENQPcqM5os5+Lj3GgD/VKkOME9BU+NA4JyF0z4AWMMWS8aoM9w/8hhzFDL0CMRc
+        cswIhE6MPAFjzj/0oMTTMfKs86GMvpQGQD7HqFcMOMsI5osxyCmqjDsDiVWgghkSk5ZA79gV4IOcurTM
+        RPIQRemoH/0S3kTkBLmpoQaStA2pk65G5A1N26iqaIvfMJUqgRku+MulQMWj6a2YFbPMqUwJlM9JsXqk
+        DDn6JDtRPuiIaetLzKADqbQk4VPON/ktcyE23pgDJlMBAQAh+QQFBAAAACwEAAQAKAAoAAAI/wABCBxI
+        kOA6cNOgBSvm6xgybN/kvStIsSLFe92OWSSorNu9jSAB4NNWLGRBX9rYmSyIztjKisbQvXynDQCxlwVv
+        FtPmL6Q9azhDSnO38d20oCal9axYE6nJpixtOt2oM1xBfC6nmjS2jyBUrSGh3iu5ERg1qtSAgfz1EYC3
+        kOrOdatYbBuAdCHt+tNoERheAP/sEiQm+K5ai8ryrQOJjaDcgXUJ/ju7UR44kL4KA7ZLWLLmighD+po7
+        UK7mwCaxLTOZWbLnlcuCvSRdEPXKYzd9rfxsm7UvXzd3U6QNUmdWk9v+Vdym22QwZLuVlybYrTlIaI3z
+        She4LTlB5iGpfaTT/l1gt3PUrYOOB5LadgDbgsN/T9livHfKNgb7C5/swPMCqfPLRnwRVxFe8S33D38W
+        kXaPehQFQ41/FGEz4EbFtAXAV2Bt9BU7fHVoUTD4sJSbiAT9JhNFHKK4oUX9SOPiQNbwsxE/Mro4jT0h
+        9aPNiU79po2NK4UTIlLBrIjTPtpc+NJOJU51zzb5hXSMNxqClU884KhmDHDBLEMNOPEsFVJAAAAh+QQF
+        BQAAACwvAC8AAQABAAAIBAABBAQAIfkEBQUAAAAsLwAvAAEAAQAACAQAAQQEADs=
+</value>
+  </data>
   <data name="fORMToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         R0lGODlhgAKAAoAAAAAAAAAAACH/C05FVFNDQVBFMi4wAwEAAAAh/gdnaWYuc2tpACH5BAQDAAAALAAA
